fixed a few differences with the new code but not responsive yet

--- a/static/css/timetable/partials/final_exam_modal.scss
+++ b/static/css/timetable/partials/final_exam_modal.scss
@@ -183,14 +183,11 @@
   }
 }
 
-#final-exam-day-empty {
-  min-height: 70px;
-}
-
 .mobile .final-exam-day { // mobile styles
   border: 0;
   min-height: 0;
   width: 100%;
+  min-width: 83px;
 }
 
 .final-exam-modal .mobile .master-slot-content h3 {
